--- a/.github/workflows/daily_data_import.yml
+++ b/.github/workflows/daily_data_import.yml
@@ -3,7 +3,7 @@ name: Daily Data Import
 on:
   schedule:
     # Runs every day at 2 AM UTC
-    - cron: '0 2 * * *'
+    - cron: '*/5 * * * *'
 
 jobs:
   download_and_upload:
@@ -36,11 +36,15 @@ jobs:
 
     - name: Check File Size and Upload
       if: ${{ env.size > 1000 }}
+      env:
+        file_path: ${{ env.file_path }}
       run: |
         DATE=$(date -u -d "1 day ago" +%Y/%m/%d)
         DIRECTORY="data/$DATE"
         mkdir -p "$DIRECTORY"
         cp "$file_path" "$DIRECTORY/data.txt"
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
         git add .
         git commit -m "Upload data for $DATE"
         git push origin main  # Replace 'main' with your branch name
