--- a/.github/workflows/daily_data_import.yml
+++ b/.github/workflows/daily_data_import.yml
@@ -46,13 +46,14 @@ jobs:
         DATE=$(date -u -d "1 day ago" +%Y/%m/%d)
         DIRECTORY="data/$DATE"
         mkdir -p "$DIRECTORY"
-        7z a -t7z -m0=lzma2 -mx=9 -mfb=64 -md=32m -ms=on data.7z "${{ env.file_path }}"
-        cp -f "${{ env.file_path }}" data/latest/data.txt
-        mv -f "${{ env.file_path }}" "$DIRECTORY/data.txt"
-        cp -f data.7z data/latest/data.7z
-        mv -f data.7z "$DIRECTORY/data.7z"
-        echo -n $DATE > data/latest/date.txt
+        mv -f "${{ env.file_path }}" data.txt
         rm -rf extracted/
+        7z a -t7z -m0=lzma2 -mx=9 -mfb=64 -md=32m -ms=on data.7z data.txt
+        cp -f data.txt data/latest/data.txt
+        mv -f data.txt $DIRECTORY/data.txt
+        cp -f data.7z data/latest/data.7z
+        mv -f data.7z $DIRECTORY/data.7z
+        echo -n $DATE > data/latest/date.txt
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
         git add .
@@ -63,4 +64,4 @@ jobs:
       if: ${{ env.size <= 1000 }}
       run: |
         echo "File size is less than or equal to 1000 bytes. Failing the workflow."
-        exit 1
+        exit 0
